Add DNS service to firewalld
Enable dns service in firewalld

--- a/roles/sno_node_prep/tasks/65_dnsmasq_tftp.yml
+++ b/roles/sno_node_prep/tasks/65_dnsmasq_tftp.yml
@@ -83,4 +83,12 @@
         immediate: true
         state: enabled
       when: firewall == "firewalld"
+
+    - name: "Allow DNS traffic"
+      ansible.posix.firewalld:
+        service: dns
+        permanent: true
+        immediate: true
+        state: enabled
+      when: firewall == "firewalld"
 ...
